--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ a {
     padding: 1rem;
     position: relative;
     z-index: 2;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
 }
 
 .terminal-header {
@@ -94,6 +94,7 @@ h1, h2, p {
     background-color: #222;
     padding: 1rem;
     border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
 }
 
 .category-title {
@@ -111,6 +112,7 @@ h1, h2, p {
     color: #03a9f4;
     margin-right: 4px;
 }
+
 /* Efecto combinado de escala y color */
 h1, h2, h3, h4 {
     transition: transform 0.3s ease, color 0.3s ease;
@@ -120,6 +122,7 @@ h1:hover, h2:hover, h3:hover, h4:hover {
     transform: scale(1.05);
     color: #03a9f4;
 }
+
 /* Contenedor para la lluvia */
 .rain-container {
     position: fixed;
@@ -127,18 +130,17 @@ h1:hover, h2:hover, h3:hover, h4:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none; /* Permite interactuar con el contenido */
+    pointer-events: none;
     overflow: hidden;
-    z-index: -1; /* Coloca la lluvia detrás del contenido */
+    z-index: -1;
 }
 
 /* Estilos para cada gota de lluvia */
 .rain-drop {
     position: absolute;
-    bottom: 100%; /* Comienza desde arriba */
+    bottom: 100%;
     width: 2px;
     height: 10px;
-    background: rgba(255, 255, 255, 0.5); /* Gotas de color blanco semitransparente */
     animation: fall linear infinite;
     opacity: 0.8;
 }
@@ -149,4 +151,3 @@ h1:hover, h2:hover, h3:hover, h4:hover {
         transform: translateY(100vh);
     }
 }
-
