--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,14 @@ a {
     padding: 1rem;
     position: relative;
     z-index: 2;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
 }
 
 .terminal-header {
     display: flex;
     gap: 6px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
+}
 }
 
 .terminal-button {
