--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,13 @@ a {
     padding: 1rem;
     position: relative;
     z-index: 2;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
+    box-shadow: 0 10px 10px rgba(138, 43, 226, 0.5); /* Sombra violeta */
 }
 
 .terminal-header {
     display: flex;
     gap: 6px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
+    box-shadow: 0 10px 10px rgba(138, 43, 226, 0.5); /* Sombra violeta */
 }
 }
 
