--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #0000;
+    background-color: 	#8000FF;
     color: #fff;
     line-height: 1.6;
     font-size: 16px;
