--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: 	#0000;
+    background-color: #121212;
     color: #fff;
     line-height: 1.6;
     font-size: 16px;
@@ -27,6 +27,8 @@ a {
     width: 100vw;
     height: 100vh;
     pointer-events: none;
+    background: url('path-to-your-noise.png');
+    opacity: 0.04;
     z-index: 1;
 }
 
@@ -39,14 +41,12 @@ a {
     padding: 1rem;
     position: relative;
     z-index: 2;
-    
+    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.3); /* Sombra violeta */
 }
 
 .terminal-header {
     display: flex;
     gap: 6px;
-    
-
 }
 
 .terminal-button {
@@ -94,7 +94,7 @@ h1, h2, p {
     background-color: #222;
     padding: 1rem;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra sutil en los contenedores */
+    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.3); /* Sombra violeta */
 }
 
 .category-title {
