--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 /* Estilos generales */
 * {
     box-sizing: border-box;
@@ -123,7 +124,6 @@ h1:hover, h2:hover, h3:hover, h4:hover {
     color: #03a9f4;
 }
 
-
 .project-grid {
     display: flex;
     flex-direction: column;
@@ -143,7 +143,6 @@ h1:hover, h2:hover, h3:hover, h4:hover {
     display: inline-block;
     margin-bottom: 5px;
 }
-
 
 /* Estilos para la lista de estadísticas */
 .behance-stats {
@@ -171,6 +170,7 @@ h1:hover, h2:hover, h3:hover, h4:hover {
     font-weight: bold;
     color: #03a9f4;
 }
+
 /* Estilos para el menú de navegación */
 header {
     background-color: #1d1d1d;
@@ -207,4 +207,7 @@ header {
     color: #ffffff;
 }
 
-
+/* Ajuste para compensación del header en secciones */
+section {
+    scroll-margin-top: 80px;
+}
